<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<group android:checkableBehavior="single">-->
        <item
                android:background="?selectableItemBackground"
                android:id="@+id/showRCCM"
                android:title="@string/RCCMTip"
                app:showAsAction="never"/>
        <item
                android:background="?selectableItemBackground"
                android:id="@+id/hideRCCM"
                android:title="@string/RCCMTip2"
                app:showAsAction="never"/>
        <item
                android:background="?selectableItemBackground"
                android:id="@+id/dontShowRCCM"
                android:title="@string/RCCMTip4"
                app:showAsAction="never"
                android:checkable="true"/>
    <!--</group>-->

</menu>